src/assets/styles/weather.css
.header {
  background-color: var(--central-ministry-colour);
  padding: 1rem 5rem;
  display: flex;
  justify-content: flex-start;
  margin-bottom: -1px;
}

.logo-text {
  color: white;
  font-size: 1.5rem;
  text-decoration: none;
}

.logo-text.bottom {
  margin-top: -0.2rem;
  font-weight: 400;
}

.logo-frame {
  padding: 0 5rem;
}

.hero {
  background-color: var(--central-ministry-colour);
  color: white;
}

.hero-title {
  font-size: 4rem;
  margin-bottom: 1rem;
}

.hero-text {
  font-size: 2rem;
}

section:not(.content, footer section) {
  padding: 2rem 5rem;
}

.heading {
  font-size: 4rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.heading::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: white;
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 10%;
  animation-range-end: cover 50%;
}

@keyframes wipe-up {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(200%);
  }
}

.section-divider {
  width: 100%;
  height: 10px;
  background-color: var(--central-ministry-colour);
  margin-bottom: 1rem;
  transform-origin: left;
  transform: scaleX(0);
  animation: wipe-right ease-in both;
  animation-timeline: view();
  animation-range-start: cover 5%;
  animation-range-end: cover 35%;
}

@keyframes wipe-right {
  0% {
    transform: scaleX(0);
  }
  100% {
    transform: scaleX(1);
  }
}

.title {
  font-size: 2.5rem;
}

.text {
  font-size: 1.5rem;
  margin-bottom: 2rem;
}

.current-weather.content {
  /* display: flex;
  flex-wrap: wrap; */
  display: grid;
  grid-template-columns: 15vw 100%;
  grid-template-rows: 2fr 1fr;
}

.current-weather.icon {
  /* flex-basis: 15vw; */
  min-width: 0;
  /* max-width: 15vw; */
  /* margin: 0; */
  place-self: center;
  grid-column: 1;
  grid-row: 1 / -1;
}

.current-weather.temp {
  font-size: 5rem;
  grid-column: 2;
  grid-row: 1;
}

.current-weather.condition {
  text-align: left;
  font-size: 2.5rem;
  grid-column: 2;
  grid-row: 2;
}

.forecast-today.content, .forecast-week.content {
  display: flex;
  overflow: auto;
}

.forecast-week.content {
  justify-content: space-evenly;
}

.item {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.time, .day {
  font-size: 2.5rem;
}

.condition {
  text-align: center;
  white-space: pre-line;
}

.icon {
  height: 10rem;
  margin: -1rem 0;
}

.temp {
  font-size: 1rem;
  font-size: 2.5rem;
}

.return {
  padding: 1rem 2rem;
  font-size: 2rem;
  font-family: var(--mona-sans);
  color: black;
  display: flex;
  max-width: fit-content;
  margin: 1rem auto 4rem auto;
  box-shadow: inset 0 0 0 0px var(--central-ministry-colour);
  border: 16px solid var(--central-ministry-colour);
  transition:
    box-shadow 0.4s ease-in-out,
    color 0.4s ease-in-out;
  will-change: box-shadow, color;
}

.return:hover {
  box-shadow: inset 0 0 0 400px var(--central-ministry-colour);
  color: white;
}

footer {
  margin-top: 2rem;
  padding: 2rem 5rem 3rem 5rem;
  background-color: var(--central-ministry-colour);
  color: white;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 2rem;
}

.footer-title {
  font-size: 2.5rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.footer-title::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: var(--central-ministry-colour);
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 5%;
  animation-range-end: cover 35%;
}

.footer-divider {
  width: 100%;
  height: 10px;
  background-color: white;
  margin-bottom: 1rem;
  transform-origin: left;
  animation: wipe-right ease-in both;
  animation-timeline: view();
  animation-range-start: cover 0%;
  animation-range-end: cover 15%;
}

.footer-ministries.links {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: fit-content;
  row-gap: 0.5rem;
  column-gap: 1rem;
}

.footer-resources.links,
.footer-about.links {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

footer .link {
  color: white;
  font-size: 1.2rem;
  position: relative;
  overflow: hidden;
  isolation: isolate;
}

footer .link::before {
  content: '';
  position: absolute;
  inset: 0;
  background-color: white;
  width: 100%;
  height: 100%;
  transform-origin: left;
  z-index: -1;
  transform: translateX(-100%);
  transition: transform 0.2s ease-out;
}

footer .link:hover::before {
  transform: translateX(0%);
}

footer .link:hover {
  color: black;
}

/* MEDIA QUERIES BELOW */
@media (max-width: 600px) {
  .header,
  section:not(.content, footer section) {
    padding: 1rem 2rem;
  }
  .hero-title {
    font-size: 2.5rem;
  }
  .hero-text {
    font-size: 1.5rem;
    margin-bottom: 2rem;
  }
  .heading {
    font-size: 2rem;
  }
  .section-divider {
    margin-bottom: 1rem;
    animation-range-start: cover 0%;
    animation-range-end: cover 20%;
  }
  .title {
    font-size: 1.5rem;
  }
  .text {
    font-size: 1rem;
    line-height: 1.5;
  }
  .current-weather.content {
    grid-template-columns: 1fr 3fr;
  }
  .current-weather.icon {
    height: 100%;
    width: auto;
    grid-row: 1;
  }
  .current-weather.temp {
    font-size: 3.5rem;
  }
  .current-weather.condition {
    font-size: 1.5rem;
    grid-column: 1 / -1;
  }
  .return {
    font-size: 1.5rem;
  }
  footer {
    flex-direction: column;
    flex-wrap: nowrap;
    padding: 2rem 3rem 3rem 3rem;
  }
  .footer-divider {
    animation-range-start: cover 0%;
    animation-range-end: cover 10%;
  }
  footer .link {
    font-size: 1rem;
  }
}
/* MEDIA QUERIES ABOVE */

